# AURA-NPU

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.docker.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  integrity_tracker.py  main.py  multimodal_logic.py  npu_engine.py  telemetry.py
app/utils/: __init__.py  language_config.py  screen_capture.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  hardware_benchmarks.md
models/: README.md  vaip_config.json
models/gemma3_4b_vlm/: config.json
models/indic_conformer/: config.json
models/svara_tts/: config.json
scripts/: benchmark.py  download_models.py  quantize.py
tests/: test_integrity.py  test_multimodal.py  test_npu_engine.py
